# faer-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  compile_benches.sh  justfile  katex-header.html  lapack.cpp  launch_benches.sh  numpy_bench.py  paper.bib  paper.md  plot_script.jl  rustfmt.toml
book/: Cargo.toml  book.typ  dev_guide.typ  user_guide.typ
book/src/: intro.rs
faer/: COPYING.EIGEN.MPL2  COPYING.LAPACK.BSD  COPYING.SUITE_SPARSE.AMD.BSD  COPYING.SUITE_SPARSE.COLAMD.BSD  Cargo.toml
faer-bench/: Cargo.toml  build.rs  c128.txt  eigen.cpp  f128.txt  numpy_bench.py
faer-bench/cvxpy-bench/: load_sparse.py
faer-bench/cvxpy-bench/murrayPortfolio/: sparse-mm-lhs.npz  sparse-mm-out.npz  sparse-mm-rhs.npz
faer-bench/src/: cholesky.rs  col_piv_qr.rs  double_f64.rs  evd.rs  full_piv_lu.rs  gemm.rs  inverse.rs  main.rs  mul.rs  no_piv_qr.rs  partial_piv_lu.rs  rectangular_svd.rs  svd.rs  symmetric_evd.rs  tr_inverse.rs  trsm.rs
faer-cholesky/: Cargo.toml
faer-cholesky/benches/: bench.rs
faer-cholesky/src/: lib.rs
faer-cholesky/src/ldl/: compute.rs  mod.rs  solve.rs  update.rs
faer-cholesky/src/ldlt/: compute.rs  mod.rs  solve.rs  update.rs
faer-cholesky/src/ldlt_diagonal/: compute.rs  mod.rs  solve.rs  update.rs
faer-cholesky/src/llt/: compute.rs  inverse.rs  mod.rs  reconstruct.rs  solve.rs  update.rs
faer-core/: Cargo.toml  build.rs
faer-core/benches/: bench.rs
faer-core/src/: add.rs  complex_mul.rs  householder.rs  inverse.rs  jacobi.rs  lib.rs  matrix_ops.rs  mul.rs  permutation.rs  simd.rs  solve.rs  symmetric.rs  zip.rs
faer-entity/: Cargo.toml
faer-entity/src/: lib.rs
faer-evd/: Cargo.toml
faer-evd/benches/: bench.rs
faer-evd/src/: hessenberg.rs  hessenberg_cplx_evd.rs  hessenberg_real_evd.rs  lib.rs  tridiag.rs  tridiag_qr_algorithm.rs  tridiag_real_evd.rs
faer-ffi/: .clang-format  Cargo.toml  build.rs  cbindgen.toml  faer.h  faer.hpp  main.cpp  quad.hpp
faer-ffi/src/: lib.rs
faer-libs/: Cargo.toml
faer-libs/faer/: Cargo.toml
faer-libs/faer-blas/: Cargo.toml
faer-libs/faer-blas/examples/: .gitignore  Makefile  gemm.c
faer-libs/faer-blas/include/: cblas.h
faer-libs/faer-blas/src/: conversions.rs  impls.rs  lib.rs
faer-libs/faer-cholesky/: Cargo.toml
faer-libs/faer-cholesky/benches/: bench.rs
faer-libs/faer-cholesky/src/: lib.rs
faer-libs/faer-cholesky/src/llt/: compute.rs  (+5 more)
faer-libs/faer-core/: Cargo.toml
faer-libs/faer-core/src/: householder.rs  inverse.rs  jacobi.rs  lib.rs  matrix_ops.rs  mul.rs  permutation.rs  serde_impl.rs  simd.rs  solve.rs  sort.rs  sparse.rs  zip.rs
faer-libs/faer-evd/: Cargo.toml
faer-libs/faer-evd/benches/: bench.rs
faer-libs/faer-evd/src/: hessenberg.rs  hessenberg_cplx_evd.rs  hessenberg_real_evd.rs  lib.rs  tridiag.rs  tridiag_qr_algorithm.rs  tridiag_real_evd.rs
faer-libs/faer-lu/: Cargo.toml
faer-libs/faer-lu/benches/: bench.rs
faer-libs/faer-qr/: Cargo.toml
faer-libs/faer-qr/benches/: bench.rs
faer-libs/faer-qr/src/: lib.rs
faer-libs/faer-sparse/: Cargo.toml  data.rs
faer-libs/faer-sparse-experimental/: Cargo.toml
faer-libs/faer-sparse-experimental/benches/: bench.rs
faer-libs/faer-sparse-experimental/src/: cholesky.rs  lib.rs  simd.rs
faer-libs/faer-sparse/benches/: cholesky.rs  lu.rs  qr.rs
faer-libs/faer-sparse/src/: amd.rs  cholesky.rs  colamd.rs  ghost.rs  lib.rs  lu.rs  mem.rs  qr.rs  superlu.rs  triangular_solve.rs
faer-libs/faer-sparse/test_data/: lp_share2b.mtx
faer-libs/faer-svd/: Cargo.toml
faer-libs/faer-svd/benches/: bench.rs
faer-libs/faer-svd/src/: bidiag.rs  bidiag_real_svd.rs  jacobi.rs  lib.rs
faer-libs/faer/examples/: conversions.rs  diabetes_data_raw.parquet  polars.rs  pseudoinverse.rs
faer-libs/faer/src/: lib.rs  proptest_support.rs
faer-lu/: Cargo.toml
faer-lu/benches/: bench.rs
faer-lu/src/: full_pivoting.rs  lib.rs
faer-lu/src/full_pivoting/: compute.rs  inverse.rs  mod.rs  reconstruct.rs  solve.rs
faer-lu/src/partial_pivoting/: compute.rs  inverse.rs  mod.rs  reconstruct.rs  solve.rs
faer-macros/: Cargo.toml
faer-macros/src/: lib.rs
faer-qr/: Cargo.toml  algo.py
faer-qr/benches/: bench.rs
faer-qr/src/: lib.rs
faer-qr/src/col_pivoting/: compute.rs  inverse.rs  mod.rs  reconstruct.rs  solve.rs
faer-qr/src/no_pivoting/: compute.rs  inverse.rs  reconstruct.rs  solve.rs
faer-sparse-experimental/: Cargo.toml  data.rs
faer-sparse-experimental/benches/: bench.rs
faer-sparse-experimental/src/: amd.rs  cholesky.rs  ghost.rs  lib.rs  mem.rs
faer-svd/: Cargo.toml
faer-svd/benches/: bench.rs
faer-svd/src/: bidiag.rs  bidiag_real_svd.rs  jacobi.rs  lib.rs
faer-traits/: Cargo.toml
faer-traits/src/: lib.rs
faer-wasm-test/: Cargo.toml
faer-wasm-test/src/: lib.rs
faer-wasm-test/tests/: load.rs
faer/benches/: bench.rs
faer/examples/: bench.rs  bench.toml  bench_col_piv_qr.rs  bench_iterative.rs  bench_sparse.rs  dynstack.rs  iris.parquet  lblt.rs  linop.rs  lu.rs  polars.rs
faer/src/: hacks.rs  io.rs  lib.rs  sort.rs  variadics.rs
faer/src/col/: col_index.rs  colmut.rs  colown.rs  colref.rs  mod.rs
faer/src/diag/: diagmut.rs  diagown.rs  diagref.rs  mod.rs
faer/src/linalg/: householder.rs  jacobi.rs  kron.rs  mat_ops.rs  mod.rs  solvers.rs  sylvester.rs  triangular_inverse.rs  triangular_solve.rs  zip.rs
faer/src/mat/: mat_index.rs  matmut.rs  matown.rs  matref.rs  mod.rs
faer/src/operator/: bicgstab.rs  conjugate_gradient.rs  lsmr.rs  mod.rs
faer/src/perm/: mod.rs  permown.rs  permref.rs
faer/src/row/: mod.rs  row_index.rs  rowmut.rs  rowown.rs  rowref.rs
faer/src/serde/: mat.rs  mod.rs
faer/src/sparse/: mod.rs  ops.rs  solvers.rs  utils.rs
faer/src/stats/: meanvar.rs  mod.rs
faer/src/utils/: approx.rs  bound.rs  mod.rs  simd.rs
faer/test_data/sparse_cholesky/: gh_258.txt  medium-0.txt  medium-1.txt  small.txt
faer/test_data/sparse_lu/: matrix_n15960.txt  matrix_n19168.txt
faer/test_data/sparse_qr/: mini.mtx
faer/test_data/svd/: svd1024_0.txt  svd1024_1.txt  svd1024_2.txt  svd128.txt  svd512.txt  svd64.txt  svd_josef.txt
(+313 files in other folders)
