[package]
name = "faer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.3"
coe-rs = "0.1.2"
dbgf = "0.1.1"
dyn-stack = "0.10.0"
equator = "0.1.10"
faer-entity = "0.17.0"
gemm = "0.17.1"
matrixcompare-core = "0.1.0"
num-complex = "0.4.5"
num-traits = "0.2.18"
paste = "1.0.14"
rayon = { version = "1.8.1", optional = true }
reborrow = "0.5.5"

[features]
default = ["rayon", "std"]
std = []
rayon = ["dep:rayon", "std"]

[dev-dependencies]
amd = "0.2.2"
assert_approx_eq = "1.1.0"
matrix-market-rs = "0.1.3"
matrixcompare = "0.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 3
