[package]
name = "faer"
version = "0.18.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.3"
coe-rs = "0.1.2"
dbgf = "0.1.1"
paste = "1.0.14"
reborrow = "0.5.5"

dyn-stack = "0.10.0"
equator = "0.1.10"
faer-entity = { version ="0.17.0", default-features = false, path = "./faer-entity" }

gemm = { version = "0.17.1", default-features = false }
num-complex = { version = "0.4.5", default-features = false }
num-traits = { version = "0.2.18", default-features = false }

matrixcompare-core = { version = "0.1.0", optional = true }
rayon = { version = "1.8.1", optional = true }
serde = { version = "1", optional = true,  features = ["derive"] }
log = { version = "0.4", optional = true, default-features = false }

[features]
default = ["std", "rayon", "serde"]
std = [
  "faer-entity/std",
  "gemm/std",
  "matrixcompare-core",
  "num-traits/std",
  "num-complex/std",
]
rayon = ["std", "gemm/rayon", "dep:rayon"]
nightly = ["faer-entity/nightly", "gemm/nightly"]
perf-warn = ["log"]
serde = ["dep:serde"]

[dev-dependencies]
amd = "0.2.2"
assert_approx_eq = "1.1.0"
matrix-market-rs = "0.1.3"
matrixcompare = "0.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 3
