[package]
name = "faer"
version = "0.18.2"
edition = "2021"
authors = ["sarah <>"]
description = "Linear algebra routines"
readme = "README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]
rust-version = "1.67.0"

[dependencies]
bytemuck = "1.14.3"
coe-rs = "0.1.2"
dbgf = "0.1.2"
paste = "1.0.14"
reborrow = "0.5.5"

dyn-stack = { version = "0.10.0", default-features = false }
equator = "0.1.10"
faer-entity = { version ="0.18.0", default-features = false, path = "./faer-entity" }

gemm = { version = "0.17.1", default-features = false }
num-complex = { version = "0.4.5", default-features = false }
num-traits = { version = "0.2.18", default-features = false }

matrixcompare-core = { version = "0.1.0", optional = true }
matrixcompare = { version = "0.3", optional = true }

rayon = { version = "1.8.1", optional = true }
serde = { version = "1", optional = true,  features = ["derive"] }
log = { version = "0.4", optional = true, default-features = false }
npyz = { version = "0.8", optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
rand_distr = { version = "0.4.3", default-features = false, optional = true }
libm = "0.2.8"

[features]
default = ["std", "rayon", "serde", "rand", "npy"]
std = [
  "faer-entity/std",
  "gemm/std",
  "matrixcompare-core",
  "matrixcompare",
  "num-traits/std",
  "num-complex/std",
]
rand = ["dep:rand", "rand_distr", "num-complex/rand"]
rayon = ["std", "gemm/rayon", "dep:rayon"]
nightly = ["faer-entity/nightly", "gemm/nightly"]
perf-warn = ["log"]
serde = ["dep:serde"]
npy = ["std", "dep:npyz"]

[dev-dependencies]
amd = "0.2.2"
assert_approx_eq = "1.1.0"
core_affinity = "0.8.1"
diol = { version = "0.8.3" }
matrix-market-rs = "0.1.3"
matrixcompare = "0.3.0"
nalgebra = "0.32.5"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0.116"
serde_test = "1.0.176"

[profile.dev]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "meanvar"
harness = false

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_aggregate"
harness = false
