[package]
name = "faer-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
nalgebra = "0.32.1"
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
faer-core = { path = "../faer-core", features = ["nightly"] }
faer-lu = { path = "../faer-lu", features = ["nightly"] }
faer-qr = { path = "../faer-qr", features = ["nightly"] }
faer-svd = { path = "../faer-svd", features = ["nightly"] }
faer-evd = { path = "../faer-evd", features = ["nightly"] }
faer-cholesky = { path = "../faer-cholesky", features = ["nightly"] }
human-repr = "1.0.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
rand = "0.8.5"
dyn-stack = "0.9"
reborrow = "0.5"
openmp-sys = "1.2.3"
num-traits = "0.2.15"
coe-rs = "0.1.2"
num-complex = "0.4.3"
pulp = "0.15"
bytemuck = "1"

[build-dependencies]
cc = "1.0.79"

[features]
default = ["eigen", "nalgebra"]

eigen = []
nalgebra = []
