[package]
name = "faer-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
nalgebra = "0.32.1"
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
faer-entity = { path = "../faer-entity", features = ["nightly"] }
faer     = { path = "..", features = ["nightly"] }

human-repr = "1.0.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"], git = "https://github.com/mike-kfed/ndarray-linalg.git", branch="arm-cross-compile"}
rand = "0.8.5"
dyn-stack = "0.10"
reborrow = "0.5"
openmp-sys = "1.2.3"
num-traits = "0.2.15"
coe-rs = "0.1.2"
num-complex = "0.4.3"
bytemuck = "1"
rayon = "1.8"
core_affinity = "0.8"
cargo-show-asm = "0.2.22"

[build-dependencies]
cc = "1.0.79"

[features]
default = ["eigen", "nalgebra"]

eigen = []
nalgebra = []
