[package]
name = "faer-core"
version = "0.4.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
gemm = { version = "0.13", default-features = false, features = ["rayon"] }
pulp = { version = "0.11", default-features = false }
aligned-vec = "0.5"
seq-macro = "0.3"

coe-rs = { workspace = true }
reborrow = { workspace = true }
dyn-stack = { workspace = true }
assert2 = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }

[features]
default = ["std"]
std = ["gemm/std", "pulp/std"]
nightly = ["gemm/nightly", "pulp/nightly"]

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
nalgebra = "0.32.1"
assert_approx_eq = "1.1.0"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
