[package]
name = "faer-core"
version = "0.12.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
faer-entity = { version = "0.12.0", default-features = false, path = "../faer-entity" }

seq-macro = "0.3"
paste =  "1.0"

coe-rs = { workspace = true }
reborrow = { workspace = true }

pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }
gemm = { version = "0.16", default-features = false }


num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
bytemuck = { workspace = true }

rayon = { workspace = true, optional = true }
assert2 = { workspace = true, optional = true }
matrixcompare-core = { version = "0.1.0", optional = true }

[features]
default = ["std", "rayon"]
std = [
  "faer-entity/std",
  "gemm/std",
  "pulp/std",
  "assert2",
  "matrixcompare-core",
]
rayon = ["std", "gemm/rayon", "dep:rayon"]
assert2 = ["dep:assert2"]
matrixcompare-core = ["dep:matrixcompare-core"]
nightly = [
  "faer-entity/nightly",
  "gemm/nightly",
  "pulp/nightly",
]

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.2"
assert_approx_eq = "1.1.0"
dbgf = "0.1.0"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
