[package]
name = "faer-entity"
version = "0.13.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
coe-rs = { workspace = true }
reborrow = { workspace = true }
bytemuck = { workspace = true }

pulp = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
libm = { workspace = true }

[features]
default = ["std"]
std = ["pulp/std"]
nightly = ["pulp/nightly"]

[dev-dependencies]
rand = "0.8.5"
assert_approx_eq = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
