[package]
name = "faer-entity"
version = "0.14.1"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

rust-version = "1.67.0"

[dependencies]
coe-rs = "0.1"
reborrow = "0.5"
pulp = { version = "0.18.4", default-features = false }

num-traits = { version = "0.2", default-features = false }
num-complex = { version = "0.4", default-features = false }
libm = "0.2"
bytemuck = { version = "1", default-features = false }

[features]
default = ["std"]
std = ["pulp/std"]
nightly = ["pulp/nightly"]

[dev-dependencies]
rand = "0.8.5"
assert_approx_eq = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
