[package]
name = "faer-evd"
version = "0.12.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
faer-core = { version = "0.12.0", default-features = false, path = "../faer-core" }
faer-qr = { version = "0.12.0", default-features = false, path = "../faer-qr" }
pulp = { workspace = true, default-features = false }
reborrow = { workspace = true }
dyn-stack = { workspace = true }
assert2 = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
bytemuck = { workspace = true }
coe-rs = { workspace = true }
dbgf = "0.1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.2"
assert_approx_eq = "1.1.0"
dbgf = "0.1.0"

[features]
default = ["std"]
std = ["faer-core/std", "pulp/std"]
nightly = ["faer-core/nightly", "pulp/nightly"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
