[workspace]
members = [
  "faer-core",
  "faer-cholesky",
  "faer-lu",
  "faer-qr",
  "faer-svd",
  "faer-evd",
  "faer-sparse",
  "faer-blas",

  "faer",
]
resolver = "2"

[workspace.dependencies]
faer-entity = { version = "0.17.0", default-features = false, path = "../faer-entity" }

gemm = { version = "0.17.1", default-features = false }

coe-rs = "0.1"
reborrow = "0.5"
pulp = { version = "0.18.8", default-features = false }
dyn-stack = { version = "0.10", default-features = false }

num-traits = { version = "0.2", default-features = false }
num-complex = { version = "0.4", default-features = false }
libm = "0.2"
bytemuck = { version = "1", default-features = false }

rand = { version = "0.8", default-features = false }
rayon = "1"
serde = { version = "1", features = ["derive"] }
assert2 = "0.3"
equator = "0.1.10"
log = { version = "0.4", default-features = false }

criterion = { git = "https://github.com/sarah-ek/criterion.rs" }

[profile.unopt]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
inherits = "release"
debug = false
