[package]
name = "faer-lu"
version = "0.4.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
faer-core = { version = "0.4", default-features = false, path = "../faer-core" }
pulp = { version = "0.10", default-features = false }
reborrow = "0.5"
dyn-stack = "0.8"
assert2 = "0.3"
num-traits = "0.2"
seq-macro = "0.3"
bytemuck = "1.12"
rayon = "1.6"

[features]
default = ["std"]
std = ["faer-core/std", "pulp/std"]
nightly = ["faer-core/nightly", "pulp/nightly"]

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
nalgebra = "0.31.4"
assert_approx_eq = "1.1.0"
rayon = "1.6"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
