[package]
name = "faer-lu"
version = "0.13.3"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
paste = "1.0.14"

faer-core = { version = "0.13.0", default-features = false, path = "../faer-core" }
faer-entity = { version = "0.13.0", default-features = false, path = "../faer-entity" }

coe-rs = { workspace = true }
reborrow = { workspace = true }
pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }

num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
bytemuck = { workspace = true }

assert2 = { workspace = true, optional = true }
log = { workspace = true, optional = true, default-features = false }

[features]
default = ["std", "rayon"]
std = [
  "faer-core/std",
  "pulp/std",
  "assert2",
]
perf-warn = ["log", "faer-core/perf-warn"]
rayon = ["std", "faer-core/rayon"]
assert2 = ["dep:assert2"]
nightly = ["faer-core/nightly", "pulp/nightly"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.3"
assert_approx_eq = "1.1.0"
rayon = { workspace = true }
core_affinity = "0.8"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
