[package]
name = "faer-macros"
version = "0.22.0"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "linear algebra library"
readme = "../README.md"
repository = "https://github.com/sarah-quinones/faer-rs/"
license = "MIT"
keywords = ["math", "linear-algebra"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits", "printing", "visit", "visit-mut", "full"] }
