[package]
name = "faer-qr"
version = "0.1.0"
edition = "2021"

[dependencies]
faer-core = { version = "0.1", default-features = false, path = "../faer-core" }
pulp = { version = "0.8", default-features = false, path = "../../pulp" }
reborrow = "0.5"
dyn-stack = "0.8"
assert2 = "0.3"
num-traits = "0.2"
num-complex = "0.4"

[features]
default = ["std"]
std = ["faer-core/std", "pulp/std"]
nightly = ["faer-core/nightly", "pulp/nightly"]

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
nalgebra = "0.31.0"
assert_approx_eq = "1.1.0"
rayon = "1.5"

[[bench]]
name = "bench"
harness = false
