[package]
name = "faer-traits"
version = "0.23.0"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "linear algebra library"
readme = "../README.md"
repository = "https://github.com/sarah-quinones/faer-rs/"
license = "MIT"
keywords = ["math", "linear-algebra"]

[dependencies]
bytemuck = "1.23.2"
reborrow = "0.5.5"
generativity = "1.1.0"
libm = { version = "0.2.15", default-features = false }

dyn-stack = { version = "0.13.0", default-features = false, features = ["core-error", "alloc"] }
pulp = { version = "0.21.5", default-features = false }
faer-macros = { path = "../faer-macros", version = "0.22.0" }

num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
qd = { version = "0.7.4", default-features = false }

[features]
default = [
  "std"
]
std = [
  "pulp/std",
  "qd/std",
  "num-traits/std",
  "num-complex/std",
  "libm/arch",
]
