[package]
name = "faer"
version = "0.21.7"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "linear algebra library"
readme = "../README.md"
repository = "https://github.com/sarah-quinones/faer-rs/"
license = "MIT"
keywords = ["math", "linear-algebra"]
rust-version = "1.84.0"

[dependencies]
bytemuck = "1.18.0"
generativity = "1.1.0"
reborrow = "0.5.5"
libm = "0.2.8"

rayon = { version = "1.10.0", optional = true }
log = { version = "0.4.22", optional = true }
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
serde = { version = "1.0.217", default-features = false, optional = true }
npyz = { version = "0.8.3", default-features = false, optional = true }

num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }

gemm = { version = "0.18.2", default-features = false }
nano-gemm = { version = "0.1.2", default-features = false }
dyn-stack = { version = "0.13.0", default-features = false, features = ["core-error", "alloc"] }
pulp = { version = "0.21.3", default-features = false, features = ["x86-v3"] }
equator = { version = "0.4.2" }

faer-traits = { path = "../faer-traits", version = "0.21.2" }
faer-macros = { path = "../faer-macros", version = "0.21.0" }


[features]
default = [
  "std",
  "rayon",
  "sparse-linalg",
  "rand",
  "npy",
]
std = [
  "pulp/std",
  "gemm/std",
  "nano-gemm/std",
]
nightly = [
  "pulp/nightly",
  "pulp/nightly-x86-v4",
  "gemm/nightly",
  "nano-gemm/nightly",
]
linalg = []
sparse = []
sparse-linalg = [
  "sparse",
  "linalg",
]
unstable = []

rayon = ["dep:rayon", "gemm/rayon"]
perf-warn = ["dep:log"]
rand = [
  "num-complex/rand",
  "dep:rand",
  "dep:rand_distr",
]
serde = [
  "dep:serde",
]
npy = [
  "std",
  "dep:npyz",
]

[dev-dependencies]
amd = "0.2.2"
assert_approx_eq = "1.1.0"
diol = { version = "0.8.3", default-features = false }
matrix-market-rs = "0.1.3"
serde_test = "1.0.177"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

