[package]
name = "faer"
version = "0.23.2"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "linear algebra library"
readme = "../README.md"
repository = "https://codeberg.org/sarah-quinones/faer"
license = "MIT"
keywords = ["math", "linear-algebra"]
rust-version = "1.84.0"

[dependencies]
bytemuck = "1.23.2"
generativity = "1.1.0"
reborrow = "0.5.5"
libm = { version = "0.2.15", default-features = false }

spindle = { version = "0.2.5", optional = true }
rayon = { version = "1.11.0", optional = true }
log = { version = "0.4.28", optional = true }
rand = { version = "0.9.2", optional = true }
rand_distr = { version = "0.5.1", optional = true }
serde = { version = "1.0.226", default-features = false, optional = true }
npyz = { version = "0.8.4", default-features = false, optional = true }

num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
dyn-stack = { version = "0.13.2", default-features = false, features = ["core-error", "alloc"] }
pulp = { version = "0.21.5", default-features = false, features = ["x86-v3"] }
equator = { version = "0.6.0" }

faer-traits = { path = "../faer-traits", version = "0.23.2", default-features = false }

gemm = { version = "0.18.2", default-features = false }
nano-gemm = { version = "0.1.3", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
private-gemm-x86 = { version = "0.1.16", default-features = false, optional = true }

[features]
default = [
  "std",
  "rayon",
  "sparse-linalg",
  "rand",
  "npy",
]
std = [
  "faer-traits/std",
  "pulp/std",
  "gemm/std",
  "nano-gemm/std",
  "libm/arch",
  "dep:private-gemm-x86",
]
nightly = [
  "pulp/nightly",
  "pulp/nightly-x86-v4",
  "gemm/nightly",
  "nano-gemm/nightly",
]
linalg = []
sparse = []
sparse-linalg = [
  "sparse",
  "linalg",
]
unstable = []

rayon = ["dep:rayon", "gemm/rayon", "private-gemm-x86?/rayon", "dep:spindle"]
perf-warn = ["dep:log"]
rand = [
  "num-complex/rand",
  "dep:rand",
  "dep:rand_distr",
]
serde = [
  "dep:serde",
]
npy = [
  "std",
  "dep:npyz",
]

[dev-dependencies]
aligned-vec = "0.6.4"
amd = "0.2.2"
assert_approx_eq = "1.1.0"
diol = { version = "0.13.1", default-features = false }
itertools = "0.14.0"
matrix-market-rs = "0.1.3"
nalgebra = "0.34"
serde_json = "1.0.145"
serde_test = "1.0.177"
toml = "0.9.7"
curl = "0.4.49"
flate2 = "1.1.2"
tar = "0.4.44"
simba = "0.9.1"
approx = "0.5.1"

[target.'cfg(eigen)'.dev-dependencies]
eigen-bench-setup = { path = "../eigen-bench-setup" }

[target.'cfg(suitesparse)'.dev-dependencies]
suitesparse_sys = { version = "0.1.4", features = ["amd", "spqr", "umfpack", "colamd", "cholmod", "camd", "ccolamd", "openmp"] }

[target.'cfg(any(openblas, mkl, blis))'.dev-dependencies]
lapack-sys = "0.15.0"
openmp-sys = "1.2.3"

[target.'cfg(openblas)'.dev-dependencies]
openblas-src = { version = "0.10.13", features = ["system"] }
lapack-src = { version = "0.11", features = ["openblas"] }

[target.'cfg(mkl)'.dev-dependencies]
intel-mkl-src = "0.8.1" 
lapack-src = { version = "0.11", features = ["intel-mkl"] }

[target.'cfg(blis)'.dev-dependencies]
blis-src = { version = "0.2.2", features = ["system"] }
lapack-src = { version = "0.11", features = ["netlib"] }
netlib-src = { version = "0.8.0", features = ["system"] }

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(eigen)',
    'cfg(openblas)',
    'cfg(mkl)',
    'cfg(blis)',
    'cfg(faer)',
    'cfg(nalgebra)',
    'cfg(suitesparse)',
    'cfg(docs_rs)',
  ] }
